--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "Discord-Bot-Maker-Bot",
-	"author": "Robert Borghese",
+	"name": "Clarence Lagamia",
+	"author": "The quiet Kid",
 	"main": "bot.js",
 	"version": "1.2.9",
 	"dependencies": {
